Agregue la logica para los impuestos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Avaluo de vehiculos</title>
 </head>
 <body>
-    <h1>Hola</h1>
+    <h1>Avaluo de Vehiculos</h1>
     <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum a nisl leo. Pellentesque quis odio convallis, convallis eros a, vestibulum sem. In non neque eget ligula vulputate suscipit luctus a nulla. Suspendisse vulputate dapibus neque et eleifend. Ut fermentum, odio in dapibus tincidunt, nibh urna auctor diam, ac ullamcorper leo nulla at eros. </p>
     <form id="formVehicle" class="form-Container">
         <label for="typeVehicle">Tipo de vehiculo</label>
