Agregue la logica para los pesos cop

--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
         <select id="year" class="xd hidden">
         </select>
         <button id="button" type="submit" class="button hidden" >Consute su avaluo</button>
+        
     </form>
 
-    <section id="mostrarAvaluo" class="avaluo hidden">
-   
+    <section id="seccionInfo"  class="avaluo hidden">
+        <div id="mostrarAvaluo" class=" hidden">
+
+        </div>
+        <div >
+            <button id='mostrarDivisas'>Converti a pesos</button>
+        <div id="divisas" class="hidden">
+        
+        </div>
+        </div>
     </section>
     <script type="module" src="./scripts/index.js" ></script>
 </body>
