Cambios a los estilos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         </div>
         <div >
-            <button id='mostrarDivisas'>Converti a pesos</button>
+            <button id='mostrarDivisas' class="button">Convertir a pesos colombianos</button>
         <div id="divisas" class="hidden">
         
         </div>
