agruegue el boton de limpiar todo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
     <section id="seccionInfo"  class="avaluo hidden">
         <div id="mostrarAvaluo" class=" hidden">
-
         </div>
         <div >
             <button id='mostrarDivisas' class="button">Convertir a pesos colombianos</button>
@@ -44,6 +43,10 @@
         </div>
         </div>
     </section>
+    <section id="reset" class="reset-container hidden">
+        <button id="reset-button" class="reset-button ">Reiniciar todo</button>
+    </section>
+
     <script type="module" src="./scripts/index.js" ></script>
 </body>
 </html>
